--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "express": "^5.2.1",
     "mineflayer": "^4.34.0"
   },
-  "script": {
-    "start": "node main.jd"
+  "scripts": {
+    "start": "node main.js"
   }
 }
